[DS-784] Fix scroll for the mobile menu on small screens

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -8,7 +8,6 @@
     color: var(--wsPrimaryColor, black);
 
     .block-ws-site-name {
-      padding: 6px;
 
       a {
         color: var(--ylb-color-black, black);
@@ -29,8 +28,8 @@
   }
 
   .header--top {
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
-    padding: 15px 20px;
+    padding: 10px 20px;
+    height: auto;
 
     &-right-column {
       display: flex;
@@ -56,6 +55,7 @@
     height: 95px;
     padding: 0 20px;
     position: relative;
+    box-shadow: inset 0 6px 6px -6px rgba(0, 0, 0, 0.15);
 
     & > .row {
       height: 100%;
@@ -167,6 +167,19 @@
     display: flex;
     padding-left: 10px;
     height: 100%;
+    visibility: hidden;
+
+    @include media-breakpoint-down(md) {
+      svg {
+        max-height: 35px;
+        position: relative;
+        left: -45px;
+
+        #logo-areas-of-impact {
+          display: none;
+        }
+      }
+    }
 
     img {
       max-width: 200px;
@@ -175,6 +188,7 @@
 
   .block-ws-search-bar {
     align-self: center;
+    visibility: hidden;
 
     .search {
       &-icon {
@@ -269,7 +283,7 @@
 
   .menu-toggle {
     position: absolute;
-    top: 20px;
+    top: 32px;
     right: 20px;
     background-color: transparent;
     display: block;
@@ -297,6 +311,7 @@
     overflow-y: auto;
 
     .header--bottom {
+      box-shadow: none;
 
       &-right-column {
         nav {
@@ -337,16 +352,6 @@
     }
   }
 
-  // A fix for small mobile screen.
-  &.scrolled {
-    .level-3,
-    .dropdown-menu {
-      height: 100% !important;
-      top: 0 !important;
-      margin-top: 0 !important;
-    }
-  }
-
   &.desktop {
     .header--bottom {
       &-left-column {
@@ -374,7 +379,6 @@
   &.mobile {
     .header--top {
       &-left-column {
-        padding: 5px 10px;
         position: initial;
       }
 
@@ -387,21 +391,10 @@
     }
 
     .header--bottom {
-      max-height: 56px;
-
-      &-left-column {
-        .block-ws-site-logo {
-          svg {
-            max-height: 35px;
-            position: relative;
-            left: -45px;
-
-            #logo-areas-of-impact {
-              display: none;
-            }
-          }
-        }
-      }
+      //height: 56px;
+      width: 100%;
+      z-index: 10;
+      background-color: var(--ylb-color-white, white);
 
       &-middle-column {
         display: block;
@@ -423,7 +416,7 @@
         .block-ws-search-bar {
           .search {
             &-icon {
-              top: 16px;
+              top: 32px;
               right: 55px;
               position: absolute;
             }
@@ -432,7 +425,7 @@
               border-radius: 0;
               height: 60px;
               padding: 12px 40px 12px 20px;
-              top: 86px;
+              top: 102px;
               width: 100%;
               bottom: -135px;
 
@@ -474,6 +467,8 @@
       }
 
       .header--bottom {
+        position: absolute;
+
         &-middle-column {
           nav {
             display: block;
