--- a/assets/scss/main-menu.scss
+++ b/assets/scss/main-menu.scss
@@ -330,6 +330,10 @@
                       }
                     }
 
+                    &:last-child {
+                      border: none;
+                    }
+
                     a {
                       color: var(--ylb-color-white, white);
                       word-break: break-word;
